--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -1,163 +1,139 @@
 
 
 \section{Experimental Protocol}\label{sec:experimental-protocol}
-In this section we will cover the motivation and the workings of the attack that will be performed.
-We also describe the setup of the experiment that will be conducted as well as the experiment itself.
+In this section, we will cover the motivation and the workings of the attack that will be performed.
+We also describe the setup of the experiment that will be conducted and the experiment itself.
 
 \subsection{Motivation}\label{subsec:proposer-dos-attack}
 \subsubsection{Proposer DoS Attack}
 In this section, we will be describing the attack that acts as motivation for doing our experiment.
-The attack is a~\gls{dos} attack that aims at hitting the proposers selected for creating blocks in the chain.
-Ethereum themselves have mentioned it as a potential attack, and with the current implementation of the consensus algorithm, it seems that this attack is possible to perform~\cite{EthereumSSLE2024,EthereumAttackDefense2024}.
+The attack is a~\gls{dos} attack aiming to halt the proposers selected for creating blocks in the chain.
+Ethereum themselves have mentioned it as a potential attack, and with the current implementation of the consensus algorithm, this attack is likely to perform~\cite{EthereumSSLE2024,EthereumAttackDefense2024}.
 
-It has been our interest to research the feasibility of this attack and the ones mentioned in~\autoref{sec:attacks-on-ethereum}.
-This has proven to be a difficult task, given that most of our researched attacks happen in the consensus- or execution layer.
-Therefore, as a result of the blockchain algorithm, we are not able to clarify the feasibility of the attacks that we have found.
-For this reason, we have chosen the \textit{Proposer~\gls{dos} attack} as it seems exciting, has not been mitigated yet, and a potential solutions seems to include a~\gls{zkp}.
+We are interested in researching the feasibility of this attack and the ones mentioned in~\autoref{sec:attacks-on-ethereum}.
+Researching feasibility has proven difficult, given that most of our researches involve attacks in the consensus or execution layer.
+This makes verifying that an attack has occurred challenging.
+For this reason, we have chosen the \textit{Proposer~\gls{dos} attack} as it seems exciting and has not been mitigated yet.
 
-The attack possible is because the consensus mechanism uses a publicly known function for choosing the upcoming block proposers.
-The adversary is therefore able to compute this in slight advance of the blockchain, s.t.\ each proposer is now known.
+The attack is possible because the consensus mechanism uses a publicly known function to choose the upcoming block proposers.
+Therefore, the adversary can compute this in advance of the upcoming slots in the blockchain so each upcoming proposer is known.
 After this, the adversary can map the proposer's IP addresses and overload their connection.
-A successful attack would leave a proposer unable to propose their block in time.
+A successful attack would prevent a proposer from proposing their block in time.
 
 \subsubsection{Adversarial Incentives for the Attack}
 
 Several reasons can explain why an adversary would be interested in performing this kind of attack.
-This counts both for adversaries running a node with validators and adversaries running a node without validators in the network.
+This applies to adversaries running a node with validators and adversaries running a node without validators in the network.
 
 
-The first reason which only requires de-anonymization, could be to exploit the inactivity penalization,
-which is mentioned in~\autoref{subsubsec:valpunish}.
+The first reason, not requiring any validators, could be exploiting the inactivity penalization mentioned in~\autoref{subsubsec:valpunish}.
 The adversary could make validators lose money for being inactive.
-For the adversaries themselves, they don't receive any monetary rewards from this attack.
-One could be interested in getting people kicked from being a validator for being 16 ether.
-But it can quickly be derived from~\autoref{eq:burn} that it would require the DoS attack
-to be ongoing for at least 9645 epochs before a validator goes from 32 ether to under 16 ether.
+For the adversaries themselves, they do not receive any monetary rewards from this attack.
+One could be interested in getting people kicked from being a validator for having below 16 staked ether.
+However, it can quickly be derived from~\autoref{eq:burn} that the~\gls{dos} attack must be ongoing for at least 9,645 epochs ($\sim$43 days) before a validator goes from 32 ether to under 16 ether.
 
 
 Having more focus on targeting upcoming proposers, the adversary can limit the rewards that the proposers are promised.
-Proposers get the best reward after proposing a block, see~\autoref{subsubsec:valrewards},
-so the adversary could limit the rewards given out to proposers.
-In the worst case, this could lead to a decrease in the total amount of ether,
-as it is dynamically changing with the chain.
+Proposers get the greatest reward after proposing a block, see~\autoref{subsubsec:valrewards}, so the adversary could limit the rewards given to proposers.
+In the worst case, this could decrease the total amount of ether, as it is dynamically changing with the chain.
 
 
-Both of the aforementioned reasons only require a node in Ethereum,
-but the adversary themselves do not gain any reward from the attack.
-This could be a possibility if the adversary is in control of a validator.
+Both reasons only require an Ethereum node, but the adversary does not gain any reward from the attack.
+Monetary gain could be a possibility if the adversary is in control of a validator.
 The reason for this is found in the~\gls{mev}~\cite{mev}.
 
-~\gls{mev} is a reference to the maximum value one can extract from a block production opportunity.
-It is a reward that the proposer can get besides rewards gotten from working on the blockchain,
-as mentioned in~\autoref{subsubsec:valrewards}.
+~\gls{mev} refers to the maximum value one can extract from a block production opportunity.
+It is a reward that the proposer can get besides rewards from routine work on the blockchain, as mentioned in~\autoref{subsubsec:valrewards}.
 The idea of~\gls{mev} is that \textit{searchers} search the network for profitable transaction opportunities.
-These are, for instance,
-opportunities where people are willing to pay a high transaction fee to the proposer for inclusion in the block.
-These transactions are then added to the pool of transactions to be added in the chain.
-There are more implementations of these searchers, fx Flashbots and MEV-Boost.
-It has been estimated that ~90\% of all Ethereum validators use this kind of software~\cite{cryptoeprint:2023/760}.
+These are, for instance, opportunities where people are willing to pay a high transaction fee to the proposer for inclusion in the block.
+These transactions are then added to the pool of transactions to be added to the chain.
+More implementations of these searchers are being made, i.e., Flashbots and MEV-Boost.
+It is estimated that ~90\% of Ethereum validators use this kind of software~\cite{cryptoeprint:2023/760}.
 
-So, let us assume a scenario, where an adversary has a validator that is set to propose the block at slot $n$.
-It could then be beneficial for the adversary to perform a~\gls{dos} attack on the proposers of slot $n-1, n-2$,
-and so on.
-Beginning from slot $n-1$ and down, the more consecutive proposers that are successfully attacked,
-the more potential gain there is for the adversary.
-This is
-because the high-paying transactions
-that were to be included in the previous slots now can be included in the adversary's slot.
-Therefore, the adversary potentially gains a greater reward from including those transactions with higher fees,
-that are now available because of the attack.
+So, let us assume a scenario in which an adversary has a validator set to propose the block at slot $n$.
+It could then be beneficial for the adversary to perform a~\gls{dos} attack on the proposers of the previous slots.
+Beginning from slot $n-1$ and down, the more consecutive proposers successfully attacked, the more potential gain the adversary has.
+The increase in potential gain is because the high-paying transactions, to be included in the previous slots, can now be included in the adversary's slot.
+Therefore, the adversary potentially gains a greater reward from including those transactions with higher fees now available because of the attack.
+
+
 
 \subsection{Attack Description}\label{subsec:attack-description}
-The overall goal of the attack is to be able to withhold validators from performing their eventual proposer duties as mentioned in~\cite{EthereumAttackDefense2024}.
+The overall goal of the attack is to be able to withhold validators from performing their eventual proposer duties, as mentioned in~\cite{EthereumAttackDefense2024}.
 The idea is that the adversary would interrupt validators using a~\gls{dos} attack.
-The attack is divided in two parts.
-First we need to know validator IP addresses, found by de-anonymizing the validators.
+The attack is divided into two parts.
+First, we need to know validator IP addresses, which are found by de-anonymizing the validators.
 This part of the attack will be explored below.
-The second part of the attack is to find out when a specific validator is going to produce a block.
-Utilizing the de-anonymized validators, the adversary should then be able to perform a~\gls{dos} attack on the upcoming block proposers.
+The second part of the attack is to determine when a specific validator will produce a block.
+By utilizing the de-anonymized validators, the adversary should be able to perform a~\gls{dos} attack on the upcoming block proposers.
 
 \subsubsection{Getting Validator IPs}
 When a node is a part of the Ethereum network,
 it receives messages in the form of attestations from other nodes in the network.
-These attestations are split into two different categories, backbone and non-backbone attestations.
+These attestations are split into two different categories: backbone and non-backbone attestations.
 A backbone attestation is typically a routine message sent between peers in the same subnet.
-This means that the nodes are simply forwarding messages to each other that they did not construct themselves.
-To explain non-backbone attestations,
-we refer directly to the observation found in ~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
+Here, the nodes forward messages to each other that they did not construct themselves.
+To explain non-backbone attestations, we refer directly to the observation in~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
 \\\\
 \textit{\textbf{Observation 1.} An ideal peer will only send us an attestation in a subnet they are not a backbone of
-if they are the signer of the attestation,
-     and we are in their fanout for the corresponding subnet of the attestation.}
+if they are the signer of the attestation, and we are in their fanout for the corresponding subnet of the attestation.}
 \\\\
 
-So optimally, all non-backbone attestations that our node receives should be constructed by the node that sent it to us.
-Therefore, in a perfect scenario,
-we would couple the validator, associated with the non-backbone attestation, to the peer that sent the message.
+Optimally, all non-backbone attestations that our node receives should be constructed by the node that sent it to us.
+Therefore, in a perfect scenario, we link the validator associated with the non-backbone attestation to the peer that sent the message.
 
-Though, there are a lot of things that are uncertain when sending messages over the internet.
-It may be that we never receive a message because of network instability.
-As stated by~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}, nodes can also run non-default configurations,
-i.e.,\ subscribing to more than two subnets, increasing the number of messages one will receive from that node.
+However, many things are uncertain when sending messages over the internet.
+For instance, we may never receive a message because of network instability.
+As stated by~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}, nodes can also run non-default configurations, i.e.,\ subscribing to more than two subnets, increasing the number of messages one will receive from that node.
 We may also wrongly label messages as backbone or non-backbone because of a lack of or delayed information regarding a node's backbone subnets.
 
-Because of this,
-the authors of the~\gls{de-anon paper} developed a heuristic to tell if a given validator could be linked with a given node~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
-The heuristic and their application are described in~\autoref{subsec:inspirational-papers}.
+Because of this, the authors of the~\gls{de-anon paper} developed a heuristic to tell if a given validator could be linked with a given node~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
+The heuristic and its application are described in~\autoref{subsec:inspirational-papers}.
 
 Assuming that we will be able to de-anonymize validators, we can take advantage of the fact that an Ethereum node always needs to include its~\gls{enr} when sending messages over the network.
 As explained in~\autoref{subsec:enr}, the node IP is always included in the~\gls{enr}, which this attack takes advantage of.
 
 \subsubsection{Finding Proposer Duties for a Proposer DoS attack}
 Applying the aforementioned heuristic to the logged data will enable us to get a list of de-anonymized validators in which the IP addresses of the nodes are included because of the~\glspl{enr}.
-Now that we should have linked validators with IP addresses, we need to find out which validators are going to propose upcoming blocks in the blockchain.
+Now that we have linked validators with IP addresses, we need to determine which validators will propose upcoming blocks in the blockchain.
 
-Having de-anonymized validators means that the~\gls{randao} proposer selection is vulnerable,
-but not limited, to a DoS attack.
-More specifically,
-it is possible to perform the Proposer DoS attack as mentioned in~\autoref{subsec:proposer-dos-attack}.
+Having de-anonymized validators means that the~\gls{randao} proposer selection is vulnerable, but not limited, to a DoS attack.
+More specifically, performing the Proposer DoS attack as mentioned in~\autoref{subsec:proposer-dos-attack} is possible.
 
 In~\autoref{subsec:randao}, we found that the proposers for an entire epoch are chosen at least one epoch in advance.
-Gathering the proposer duties can be easily obtained, as Ethereum provides an API endpoint for the blockchain,
-providing information on the chain~\footnote{The API calls are found \href{https://ethereum.github.io/beacon-APIs/\#/Validator/getProposerDuties}{here.}}.
+Gathering the proposer duties can be easily obtained, as Ethereum provides an API endpoint for the blockchain, providing information on the chain~\footnote{The API calls are found at \href{https://ethereum.github.io/beacon-APIs/\#/Validator/getProposerDuties}{ethereum.github.io/beacon-APIs}}.
 The adversary would only need an Ethereum node to use this API; a validator is not required.
-This is especially beneficial, as one can perform the attack without staking any money into Ethereum.
+Not needing a validator is especially beneficial, as one can perform the attack without staking any money into Ethereum.
 
-The output of the call to the API returns a list of slots.
-For each component in the list is the chosen validator's public key,
-ID, and the slot in which they are chosen to propose a block.
+The output of a call to the API returns a list of slots.
+Each component in the list is the chosen validator's public key, ID, and the slot in which they are chosen to propose a block.
 
-Therefore, a list of the de-anonymized validators could be iterated,
-where the goal of the adversary would be to match the proposers for the upcoming epoch.
-Included in the de-anonymization is the IP-addresses of the validator as well as their ID and public key.
-So having matched the upcoming proposers with de-anonymized validators,
-an adversary now ideally knows the IP-addresses of several upcoming proposers.
+Therefore, a list of the de-anonymized validators could be iterated, with the adversary's goal being to match the proposers for the upcoming epoch.
+The de-anonymization includes the IP addresses of the validators as well as their ID and public key.
+So, having matched the upcoming proposers with de-anonymized validators, an adversary now ideally knows the IP addresses of several upcoming proposers.
 
-This allows for the adversary to~\gls{dos} the specific IP-address,
-which could leave the proposer inactive at their designated slot.
+This information allows the adversary to~\gls{dos} the specific IP address, which could leave the proposer inactive at their designated slot.
 
 \subsection{De-anonymization Attack Implementation}\label{subsec:attack-implementation}
-the work in this paper revolves around modifying a fork of the Prysm consensus client.
+Being able to de-anonymize validators revolves around modifying a fork of the Prysm consensus client.
 
-To be able to implement the attack,
-it is a case of finding where the different functionalities are written in the code.
-It is enough to modify just two classes in the code to reach a point where the attack is possible.
-Two entities are logged, peers and attestations.
-This translates almost directly to the code in the Prysm client, as each of these can be handled by a class each.
+To implement the attack, one must find where the different functionalities are written in the code.
+Modifying just two classes in the code is enough to make the attack possible: one for handling peers and another for handling attestations.
 
-It is also an important thing to keep in mind that the core functionality of Prysm is never changed.
-So no changes have been made to variables already being used in the Prysm client.
+It is also important to remember that the core functionality of Prysm is never changed.
+So, no changes have been made to variables already used in the Prysm client.
 
 
 
 
 \subsubsection{Peers}\label{subsubsec:peers}
-The logs of the attestations share similarities with the logs of the peers, so the peers will be described first.
+The attestation logs include all data also included in the peer logs.
+Therefore, the peers will be described first.
 All changes are done to the \texttt{beacon-chain} files in Prysm.
 
 A pointer to a \texttt{Service} object is typically maintained in the different classes of the Prysm code.
-This object is an implementation of an interface responsible for handling functionality coupled with the given class.
-The class that handles~\gls{p2p} connections has got this as well, with several specific functions for handling a peer.
+This object implements an interface for handling functionality coupled with the given class.
+The class that handles~\gls{p2p} connections also has such an object, with several specific functions for handling a peer.
 
 Because of said object, information about all earlier or connected peers is available.
 Set to run every minute, the modified code requests all peers and iterates through them,
@@ -174,26 +150,23 @@ For a peer, by accessing the \texttt{service} class in the \texttt{p2p} files, w
 \end{itemize}
 
 
-Also in each iteration,
-the collected information is sent to an \texttt{SQL} database such the data can be processed later.
+Also, in each iteration, the collected information is sent to an \texttt{SQL} database to process the data later.
 
 \subsubsection{Attestations}\label{subsubsec:attestations}
-Everything logged for the peers is also logged for the attestations,
-as there is always an underlying node sending each attestation.
+Everything logged for the peers is also logged for the attestations, as there is always an underlying node sending each attestation.
 
-The class handling the attestations, called \texttt{validate\_beacon\_attestation}, also has a \texttt{Service} interface implementation.
-This implementation primarily includes functions specific for the attestations, and not peers.
+The class handling the attestations called \texttt{validate\_beacon\_attestation}, also has a \texttt{Service} interface implementation.
+This implementation primarily includes functions specific to the attestations and not peers.
 Therefore, each \texttt{Service} object has a pointer to a configuration of the running chain.
-Referencing this pointer allows the class to access functions as the ones available in the~\gls{p2p} class.
+Referencing this pointer allows the class to access functions like those in the~\gls{p2p} class.
 
 We log information about an attestation whenever we receive one.
 
-With the proposer DoS attack in mind, we are interested in receiving the public key and ID of the validator,
-who is the creator of the attestation.
+With the proposer~\gls{dos} attack in mind, we are interested in receiving the public key and ID of the validator, the creator of the attestation.
 Also, we want the IP address of the peer that sent the attestation to the node.
 
-Getting the public key makes use of an existing function called \texttt{extractPublicKey}, which uses the attestation's data to get public key and ID of the validator.
-Getting the IP address is also straight-forward, as the peer \texttt{Service} object includes a function called \texttt{address}, returning the address of the peer sending the attestation.
+Getting the public key uses an existing function called \texttt{extractPublicKey}, which uses the attestation's data to get the public key and ID of the validator.
+Getting the IP address is also straightforward, as the peer \texttt{Service} object includes a function called \texttt{address}, returning the address of the peer who sent the attestation.
 
 In addition to this, we also log the following information available from processing the attestation:
 \begin{itemize}
@@ -203,37 +176,33 @@ In addition to this, we also log the following information available from proces
      \item Target
 \end{itemize}
 
-After collecting all the information available for an attestation,
-the data is logged to an \texttt{SQL} database.
+After collecting all the information available for an attestation, the data is logged to an \texttt{SQL} database.
 
-\subsection{Setup}\label{subsec:setup}
-For the attack, we modify the implementation of the Prysm consensus client~\cite{prysm}.
-Prysm is also one of the most used clients for connecting with the consensus layer~\cite{client-diversity}.
-The Prysm node is modified to subscribe to all 64 subnets in the network, which enables it to receive as many attestations as possible.
-Adding to that, and also aiming for experimental consistency with the~\gls{de-anon paper}, we allow our node to connect to up to 1,000 peers.
+\subsection{Experimental Setup}\label{subsec:setup}
+For the experiment, we modified the implementation of the Prysm consensus client~\cite{prysm}.
+Prysm is one of the most used clients for connecting with the consensus layer~\cite{client-diversity}.
+The Prysm node is modified to subscribe to all 64 network subnets, enabling it to receive as many attestations as possible.
+Additionally, aiming for experimental consistency with the~\gls{de-anon paper}, we allow our node to connect to up to 1,000 peers.
 
 The only change is that we log the data as explained in~\autoref{subsec:attack-implementation}.
-Apart from that, our node performs tasks as any other node in Ethereum would.
+Apart from that, our node performs tasks like any other Ethereum node would.
 
 
-Aiming to log as much data as possible while trying to get as many connections as possible requires a lot of computational resources.
+We aim to de-anonymize validators on as many peers as we come in contact with.
+However, this requires a lot of computational resources when the node is subscribed to all subnets.
 Our instance of the modified Prysm node was running in cooperation with a Go-Ethereum execution client.
 The client was then run on a virtual machine hosted on Strato CLAAUDIA through Aalborg University.
-The virtual machine had 16 virtual CPUs as well as 64 GB of RAM available.
+The virtual machine had 16 virtual CPUs and 64 GB of RAM available.
 The physical location of the virtual machine is in Denmark.
 
-While still aiming for consistency in regard to the~\gls{de-anon paper}, we collect data in the span of three days (December 13th, 13:04 UTC to December 16th, 13:12 UTC).
-Around 300 GB of data was collected into a PostgreSQL database and afterward also processed in PostgreSQL\@.
+While still aiming for consistency concerning the~\gls{de-anon paper}, we collect data over three days (December 13th, 13:04 UTC to December 16th, 13:12 UTC).
+Around 300 GB of data was collected into a PostgreSQL database and processed in PostgreSQL\@.
 
 
-To start receiving attestations and reaching and connecting other peers,
-the client was connected to the Holesky testnet.
+The client was connected to the Holesky testnet to start receiving attestations and connecting with other peers.
 Since the experiment is of an adversarial nature, the client was connected to a testnet instead of the mainnet.
 
-While the client was running,
-it was able to log information from the received attestations as well as on the peers it discovered.
-Among other things, the client logged peer~\glspl{enr}, the subnets that the attestations were sent to,
-the subnet that the peer was in and the public key associated with the attestation.
+While the client was running, it was able to log information on the received attestations and the peers it discovered.
+We logged the same peer and attestation data as described in~\autoref{subsec:attack-implementation}
 The data that was logged was then stored in a database for further analysis.
-After this,
-the peers were sorted into the same four categories mentioned in~\autoref{subsec:inspirational-papers}, originally developed in the~\gls{de-anon paper}~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
+After this, the peers were sorted into the same four categories mentioned in~\autoref{subsec:inspirational-papers}, initially developed in the~\gls{de-anon paper}~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
