--- a/report/src/sections/10-acknowledgements.tex
+++ b/report/src/sections/10-acknowledgements.tex
@@ -3,8 +3,8 @@
 \section{Acknowledgements}\label{sec:acknowledgements}
 We want to express our sincere gratitude to Daniele Dell'Aglio and Michele Albano for their supervision and guidance throughout this thesis.
 
-We also want to thank the authors of Springproofs~\cite{zhang2024springproofs} for supplying their code used which we used for reference when building CAAUrdleproofs in this thesis.
-Also we thank the authors of Larsen et al.~\cite{cryptoeprint:2022/560} for being of great help by providing answers to our questions regarding their paper on shuffle security.
+We also want to thank the authors of Springproofs~\cite{zhang2024springproofs} for providing their code, which we used as a reference when building CAAUrdleproofs in this thesis.
+We also thank the authors of Larsen et al.~\cite{cryptoeprint:2022/560} for their great help in providing answers to our questions regarding their paper on shuffle security.
 
 We also acknowledge the usage of AI tools such as ChatGPT, GitHub Copilot, and Grammarly.
 These have been used for clarification and implementation purposes.
